fix(cli): fix select scrollbar display error #305 and add esm bundle

--- a/packages/varlet-ui/src/select/select.less
+++ b/packages/varlet-ui/src/select/select.less
@@ -111,7 +111,6 @@
     border: none;
     font-size: inherit;
     color: var(--select-select-text-color);
-    overflow-x: auto;
   }
 
   &__arrow[var-select-cover] {
